--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,24 @@
     "description": "Rapsys packing extension",
     "license": "AGPL-3.0-or-later",
     "type": "symfony-bundle",
+    "authors": [{
+	    "name": "Raphaël Gertz",
+	    "email": "packbundle@rapsys.eu"
+    }],
+    "autoload": {
+	    "psr-0": {
+		    "Rapsys\\PackBundle": ""
+	    }
+    },
+    "target-dir": "Rapsys/PackBundle",
     "require": {
         "php": ">=5.6",
         "twig/twig": ">=1.0"
     },
     "extra": {
+        "branch-alias": {
+		"dev-master": "master"
+	},
         "incenteev-parameters": {
             "file": "Resources/config/parameters.yml",
 	    "keep-outdated": true
