--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"bundles": {
 		"Rapsys\\PackBundle": ["all"]
 	},
-	"copy-from-recipe": {
+	"copy-from-package": {
 		"config/": "%CONFIG_DIR%/"
 	}
 }
