--- a/Resources/config/packages/rapsys_pack.yaml
+++ b/Resources/config/packages/rapsys_pack.yaml
@@ -1,13 +1,11 @@
 #Services configuration
 services:
     #Register assets pack package
-    assets.pack_package:
+    rapsys.pack_package:
         class: 'Rapsys\PackBundle\Asset\PackPackage'
         arguments: [ '/', '@assets.empty_version_strategy', '@assets.context' ]
-#       arguments: [ '/', '@assets.static_version_strategy', '@assets.context' ]
-#       arguments: [ '/bundles/%%s', '@assets.empty_version_strategy', '@assets.context' ]
     #Register twig pack extension
-    rapsys_pack.twig.pack_extension:
+    rapsys.pack_extension:
         class: 'Rapsys\PackBundle\Twig\PackExtension'
-        arguments: [ '@file_locator', '@service_container', '@assets.pack_package' ]
+        arguments: [ '@file_locator', '@service_container', '@rapsys.pack_package' ]
         tags: [ 'twig.extension' ]
