--- a/Resources/config/packages/rapsys_pack.yaml
+++ b/Resources/config/packages/rapsys_pack.yaml
@@ -1,11 +1,11 @@
 #Services configuration
 services:
     #Register assets pack package
-    rapsys.path_package:
+    rapsys_pack.path_package:
         class: 'Rapsys\PackBundle\Asset\PathPackage'
         arguments: [ '/', '@assets.empty_version_strategy', '@assets.context' ]
     #Register twig pack extension
-    rapsys.pack_extension:
+    rapsys_pack.pack_extension:
         class: 'Rapsys\PackBundle\Twig\PackExtension'
-        arguments: [ '@file_locator', '@service_container', '@rapsys.path_package' ]
+        arguments: [ '@file_locator', '@service_container', '@rapsys_pack.path_package' ]
         tags: [ 'twig.extension' ]
