--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,11 @@
         }
     },
     "require": {
-        "symfony/asset": "^4.4",
-        "symfony/flex": "^1.5",
-        "symfony/framework-bundle": "^4.4",
-        "symfony/process": "^4.4",
-        "symfony/twig-bundle": "^4.4",
-        "twig/extensions": "^1.5"
+        "symfony/asset": "^4.0|^5.0",
+        "symfony/flex": "^1.0",
+        "symfony/framework-bundle": "^4.0|^5.0",
+        "symfony/process": "^4.0|^5.0",
+        "symfony/twig-bundle": "^4.0|^5.0"
     },
     "extra": {
         "branch-alias": {
