--- a/Resources/config/packages/rapsys_pack.yaml
+++ b/Resources/config/packages/rapsys_pack.yaml
@@ -22,17 +22,21 @@ services:
     rapsys_pack.intl_util:
         class: 'Rapsys\PackBundle\Util\IntlUtil'
         public: true
+    #Register facebook event subscriber
+    Rapsys\PackBundle\Subscriber\FacebookSubscriber:
+        arguments: [ '@router', '%rapsys_air.locales%' ]
+        tags: [ 'kernel.event_subscriber' ]
     #Register intl util class alias
     Rapsys\PackBundle\Util\IntlUtil:
         alias: 'rapsys_pack.intl_util'
-    #Register osm util service
-    rapsys_pack.osm_util:
-        class: 'Rapsys\PackBundle\Util\OsmUtil'
-        arguments: [ '%kernel.project_dir%/var/cache', '%rapsys_pack.public.path%', '%rapsys_pack.public.url%' ]
+    #Register map util service
+    rapsys_pack.map_util:
+        class: 'Rapsys\PackBundle\Util\MapUtil'
+        arguments: [ '@router', '@rapsys_pack.slugger_util' ]
         public: true
-    #Register osm util class alias
-    Rapsys\PackBundle\Util\OsmUtil:
-        alias: 'rapsys_pack.osm_util'
+    #Register map util class alias
+    Rapsys\PackBundle\Util\MapUtil:
+        alias: 'rapsys_pack.map_util'
     #Register slugger util service
     rapsys_pack.slugger_util:
         class: 'Rapsys\PackBundle\Util\SluggerUtil'
@@ -41,3 +45,7 @@ services:
     #Register slugger util class alias
     Rapsys\PackBundle\Util\SluggerUtil:
         alias: 'rapsys_pack.slugger_util'
+    #Register map controller
+    Rapsys\PackBundle\Controller\MapController:
+        arguments: [ '@service_container', '@rapsys_pack.map_util', '@rapsys_pack.slugger_util', '%kernel.project_dir%/var/cache/map', '%rapsys_pack.public.path%/map' ]
+        tags: [ 'controller.service_arguments' ]
