--- a/Resources/config/routes/rapsys_pack.yaml
+++ b/Resources/config/routes/rapsys_pack.yaml
@@ -4,9 +4,8 @@ rapsys_pack_captcha:
     controller: Rapsys\PackBundle\Controller\ImageController::captcha
     methods: GET
 
-rapsys_pack_thumb:
-    path: '/thumb/{hash<[a-zA-Z0-9=_-]+>}/{updated<\d+>}/{path<[a-zA-Z0-9=_-]+>}/{width<\d+>?640}/{height<\d+>?640}.{_format?jpeg}'
-    controller: Rapsys\PackBundle\Controller\ImageController::thumb
+rapsys_pack_facebook:
+    path: '/bundles/rapsyspack/facebook/{mtime<\d+>}{path</.*>}.{!_format?jpeg}'
     methods: GET
 
 rapsys_pack_map:
@@ -17,4 +16,9 @@ rapsys_pack_map:
 rapsys_pack_multimap:
     path: '/multimap/{hash<[a-zA-Z0-9=_-]+>}/{updated<\d+>}/{latitude<\d+(\.?\d+)?>}/{longitude<\d+(\.?\d+)?>}/{coordinates<\d+(\.\d+)?,\d+(\.\d+)?(-\d+(\.\d+)?,\d+(\.\d+)?)*>}/{zoom<\d+>?15}/{width<\d+>?640}/{height<\d+>?640}.{_format?jpeg}'
     controller: Rapsys\PackBundle\Controller\MapController::multimap
+    methods: GET
+
+rapsys_pack_thumb:
+    path: '/thumb/{hash<[a-zA-Z0-9=_-]+>}/{updated<\d+>}/{path<[a-zA-Z0-9=_-]+>}/{width<\d+>?640}/{height<\d+>?640}.{_format?jpeg}'
+    controller: Rapsys\PackBundle\Controller\ImageController::thumb
     methods: GET
