--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         }
     },
     "require": {
-        "symfony/asset": "^4.0|^5.0|^6.0|^7.0",
-        "symfony/flex": "^1.0|^2.0",
-        "symfony/framework-bundle": "^4.0|^5.0|^6.0|^7.0",
-        "symfony/process": "^4.0|^5.0|^6.0|^7.0",
-        "symfony/twig-bundle": "^4.0|^5.0|^6.0|^7.0"
+        "symfony/asset": "^7.0",
+        "symfony/flex": "^2.0",
+        "symfony/framework-bundle": "^7.0",
+        "symfony/process": "^7.0",
+        "symfony/twig-bundle": "^7.0"
     },
     "extra": {
         "branch-alias": {
