--- a/config/packages/rapsyspack.yaml
+++ b/config/packages/rapsyspack.yaml
@@ -21,11 +21,6 @@ services:
     assets.packages:
         class: 'Symfony\Component\Asset\Packages'
         arguments: [ '@rapsyspack.path_package' ]
-    # Register facebook util service
-    rapsyspack.facebook_util:
-        class: 'Rapsys\PackBundle\Util\FacebookUtil'
-        arguments: [ '@router', '%kernel.project_dir%/var/cache', '%rapsyspack.path%' ]
-        public: true
     # Register file util service
     rapsyspack.file_util:
         class: 'Rapsys\PackBundle\Util\FileUtil'
@@ -34,21 +29,16 @@ services:
     # Register image util service
     rapsyspack.image_util:
         class: 'Rapsys\PackBundle\Util\ImageUtil'
-        arguments: [ '@router', '@rapsyspack.slugger_util', '%kernel.project_dir%/var/cache', '%rapsyspack.path%' ]
+        arguments: [ '@service_container', '@router', '@rapsyspack.slugger_util' ]
         public: true
     # Register intl util service
     rapsyspack.intl_util:
         class: 'Rapsys\PackBundle\Util\IntlUtil'
         public: true
-    # Register map util service
-    rapsyspack.map_util:
-        class: 'Rapsys\PackBundle\Util\MapUtil'
-        arguments: [ '@router', '@rapsyspack.slugger_util' ]
-        public: true
     # Register twig pack extension
     rapsyspack.pack_extension:
         class: 'Rapsys\PackBundle\Extension\PackExtension'
-        arguments: [ '@rapsyspack.intl_util', '@file_locator', '@rapsyspack.path_package', '@rapsyspack.slugger_util', '%rapsyspack%' ]
+        arguments: [ '@service_container', '@rapsyspack.intl_util', '@file_locator', '@router', '@rapsyspack.slugger_util' ]
         tags: [ 'twig.extension' ]
     # Register assets pack package
     rapsyspack.path_package:
@@ -64,25 +54,22 @@ services:
     Rapsys\PackBundle\Command\RangeCommand:
         arguments: [ '%kernel.project_dir%/.env.local' ]
         tags: [ 'console.command' ]
-    # Register image controller
-    Rapsys\PackBundle\Controller\ImageController:
-        arguments: [ '@service_container', '@rapsyspack.image_util', '@rapsyspack.slugger_util', '%kernel.project_dir%/var/cache', '%rapsyspack.path%' ]
+    # Register controller
+    Rapsys\PackBundle\Controller:
+        arguments: [ '@service_container', '@rapsyspack.image_util', '@rapsyspack.slugger_util' ]
         tags: [ 'controller.service_arguments' ]
-    # Register map controller
-    Rapsys\PackBundle\Controller\MapController:
-        arguments: [ '@service_container', '@rapsyspack.map_util', '@rapsyspack.slugger_util', '%kernel.project_dir%/var/cache', '%rapsyspack.path%' ]
-        tags: [ 'controller.service_arguments' ]
-    # Register captcha form type
+    # Register captcha form
     Rapsys\PackBundle\Form\CaptchaType:
+        arguments: [ '@rapsyspack.image_util', '@rapsyspack.slugger_util', '@translator' ]
+        tags: [ 'form.type' ]
+    # Register contact form
+    Rapsys\PackBundle\Form\ContactType:
         arguments: [ '@rapsyspack.image_util', '@rapsyspack.slugger_util', '@translator' ]
         tags: [ 'form.type' ]
     # Register facebook event subscriber
     Rapsys\PackBundle\Subscriber\FacebookSubscriber:
         arguments: [ '@router', [] ]
         tags: [ 'kernel.event_subscriber' ]
-    # Register facebook util class alias
-    Rapsys\PackBundle\Util\FacebookUtil:
-        alias: 'rapsyspack.facebook_util'
     # Register file util class alias
     Rapsys\PackBundle\Util\FileUtil:
         alias: 'rapsyspack.file_util'
@@ -92,9 +79,6 @@ services:
     # Register intl util class alias
     Rapsys\PackBundle\Util\IntlUtil:
         alias: 'rapsyspack.intl_util'
-    # Register map util class alias
-    Rapsys\PackBundle\Util\MapUtil:
-        alias: 'rapsyspack.map_util'
     # Register slugger util class alias
     Rapsys\PackBundle\Util\SluggerUtil:
         alias: 'rapsyspack.slugger_util'
